log
Fri May  1 07:00:49 PM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/60
380367e
Fri May  1 07:15:42 PM UTC 2026: 
 tests:  4|7
total_score: 5/60
1d44dbc
Fri May  1 08:27:43 PM UTC 2026: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:67:50: error: expected ‘;’ before ‘:’ token
   67 |         if(key > aux->pair->key) aux = aux->right:
      |                                                  ^
      |                                                  ;
dde8f72
Fri May  1 08:27:58 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
8518742
Fri May  1 08:46:43 PM UTC 2026: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/60
1ca9b38
Fri May  1 08:47:22 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/60
b1481b3
Fri May  1 08:47:56 PM UTC 2026: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  6|7
total_score: 5/60
96221c6
Fri May  1 08:48:34 PM UTC 2026: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/60
128e86b
Fri May  1 08:49:32 PM UTC 2026: 
 treemap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  6|7
total_score: 5/60
8d3fe21
Fri May  1 08:52:37 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
11d7154
Fri May  1 09:30:31 PM UTC 2026: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
8aa9478
Fri May  1 09:36:48 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/60
2dbcb8d
Fri May  1 09:43:18 PM UTC 2026: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/60
8f9fbfe
Fri May  1 09:46:50 PM UTC 2026: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:146:11: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Wimplicit-function-declaration]
  146 |     aux = minimun(aux);
      |           ^~~~~~~
      |           minimum
treemap.c:146:9: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  146 |     aux = minimun(aux);
      |         ^
63ba58d
Fri May  1 09:49:21 PM UTC 2026: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/60
2db887c
Fri May  1 10:09:15 PM UTC 2026: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  17|3
total_score: 30/60
1b32493
